fix: h1 and hero text: due to overflow hidden, disappearance of unnecessary content

--- a/starterOnly/css/index.css
+++ b/starterOnly/css/index.css
@@ -13,10 +13,23 @@
 		margin: 5px 2px;
 		padding: 12px 5px;
 	}
+	.hero-section {
+		padding-left: 0;
+	}
+	h1.hero-headline {
+		font-size: 4rem;
+	}
+	p.hero-text {
+		font-size: 1.2rem;
+		padding: 0 1px 0 0;
+	}
 }
 
 @media screen and (max-width: 600px) {
 	h1.hero-headline {
-		font-size: 3rem;
+		font-size: 2.4rem;
+	}
+	p.hero-text {
+		margin-top: 22px;
 	}
 }
